[gd_scene load_steps=3 format=3 uid="uid://mainmenu"]

[ext_resource type="Script" uid="uid://3gqa8lif53j1" path="res://scripts/mainmenu/MainMenu.gd" id="1_32njf"]
[ext_resource type="Texture2D" uid="uid://gap08bo5upnl" path="res://assets/background/characterbg.png" id="2_xmi0c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32njf")

[node name="Characterbg" type="Sprite2D" parent="."]
scale = Vector2(1.25, 1.05469)
texture = ExtResource("2_xmi0c")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -610.0
offset_top = -743.0
offset_right = -463.0
offset_bottom = -467.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"
alignment = 2
icon_alignment = 2
vertical_icon_alignment = 2
expand_icon = true

[node name="HistoryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "See History"
alignment = 2
icon_alignment = 2
vertical_icon_alignment = 2
expand_icon = true

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
alignment = 2
icon_alignment = 2
vertical_icon_alignment = 2
expand_icon = true

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
alignment = 2
icon_alignment = 2
vertical_icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 159.0
offset_right = 948.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0.625505, 0.276431, 0, 1)
theme_override_font_sizes/font_size = 108
text = "Novellus"
